# Investments_Figures

./: .gitignore  .pre-commit-config.yaml  CH10_10.3.6_capm.py  CH12_12.3.1_alpha.py  CH12_12.3.1_momentum.py  CH12_12.3.1_momentum_1.py  CH12_12.3.2_momentum.py  CH12_12.3.2_momentum_2.py  CH12_12.3.3_beta.py  CH12_12.3.3_beta_1.py  CH12_12.3.4_beta.py  CH12_12.3.4_beta_2.py  CH12_12.3.5_accrual.py  CH12_12.3.6_accrual.py  CH12_12.3.7_bm.py  CH12_12.3.8_bm.py  CH15_15.2.1_hockeysticks.py  CH15_15.2.2_straddle.py  CH15_15.2.3_coveredcall.py  CH15_15.2.4_butterfly.py  CH16_16.5.2.py  CH1_1.1_market_plot.py  CH1_1.2_market_cap.py  CH3_3.2_ipo_chart_1.py  CH3_3.2_ipo_chart_2.py  CH5_5.1_pdf.py  CH5_5.2_pdf.py  CH5_5.3_pdf.py  CH5_normal_densities.py  CH5_normalcdf1.py  CH5_normalcdf2.py  CH5_normalcdf3.py  CH6_1.1_Variance_&_PDF.py  CH6_1.2_Concave_Utility_Function.py  CH6_1.3_Concave_Utility_Function.py  CH6_1.4_Varying_Levels_of_RA.py  CH6_2.1_Capital_Allocation_line_1.py  CH6_6.2.1_First_Cal.py  CH6_6.2.2_capital_allocation_line.py  CH6_6.2.3_two_CAL_lines.py  (+50 more)
datasets/: __init__.py  autoliv.py  ch7_731_data.py  crsp_functions.py  crsp_monthly.py  crsp_update.py  dataset.py  fama_french_factors.py  french_accrual_portfolios.py  french_beta_portfolios.py  french_bm_portfolios.py  french_momentum_portfolios.py  ipo_data.py  points_per_game.py
